--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-  "name": "vue-tree-grid",
+  "name": "tree-grid-component",
   "version": "1.0.0",
   "description": "基于vue.js的树形表格。",
-  "author": "",
-  "private": true,
+  "bugs": "https://github.com/Inception-entry/vue-tree-grid/issues",
+  "author": "Inception-entry<batman_gotham@126.com>",
+  "license": "MIT",
+  "repository": {
+		"url": "https://github.com/Inception-entry/vue-tree-grid.git",
+		"type": "git"
+	},
+  "keywords": [
+    "vue",
+    "tree-table",
+    "tree-grid",
+    "树形表格",
+    "树状表格"
+  ],
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
