--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tree-grid-component",
   "version": "1.0.6",
   "description": "基于vue.js的树形表格。",
+  "main": "index.js",
   "bugs": "https://github.com/Inception-entry/vue-tree-grid/issues",
   "author": "Inception-entry<batman_gotham@126.com>",
   "license": "MIT",
